--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>SHOOTEM</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
 	<script src="jquery-1.11.1.js"></script>
         <script src="script.js"></script>
