added target counter to scoreboard

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <input id="missCount" class="display" readonly></input>
             <label for="accuracy">Accuracy:</label>
             <input id="accuracy" class="display" readonly></input>
+			<label for="targetCount">Targets:</label>
+			<input id="targetCount" class="display" readonly/>
         </div>
         </p>
 	</body>
