collapsed scoreboard input tags

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <p>
         <div id="scoreboard">
             <label for="score">Hits:</label>
-            <input id="score" class="display" readonly></input>
+            <input id="score" class="display" readonly/>
             <label for="missCount">Misses:</label>
-            <input id="missCount" class="display" readonly></input>
+            <input id="missCount" class="display" readonly/>
             <label for="accuracy">Accuracy:</label>
-            <input id="accuracy" class="display" readonly></input>
+            <input id="accuracy" class="display" readonly/>
 			<label for="targetCount">Targets:</label>
 			<input id="targetCount" class="display" readonly/>
         </div>
