--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <script src="script.js"></script>
 	</head>
 	<body>
-        <canvas id="shootem" height=400 width=400></canvas>
+        <div id="playfield" height=400 width=400>
+            <canvas id="shootem" height=400 width=400></canvas>
+            <div id="pfoverlay">
+				<div id="strtmsg">CLICK TO START</div>
+			</div>
+        </div>
         <div id="debug">
             <label for="targetinfo">Target Info:</label>
             <div id="targetinfo">
