--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
 	<script src="jquery-1.11.1.js"></script>
         <script src="script.js"></script>
+        <script src="wsView.js"></script>
 	</head>
 	<body>
         <div id="playfield" height=400 width=400>
             <canvas id="shootem" height=400 width=400></canvas>
-            <div id="pfoverlay">
+            <div id="startScreen">
 				<div id="strtmsg">CLICK TO START</div>
 			</div>
         </div>
