renamed script references

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>SHOOTEM</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
 	<script src="jquery-1.11.1.js"></script>
-        <script src="script.js"></script>
-        <script src="wsView.js"></script>
+        <script src="shootem.js"></script>
+        <script src="shtmView.js"></script>
 	</head>
 	<body>
         <div id="playfield" height=400 width=400>
