added pause screen overlay
added pause screen overlay.
added new html class "overlay" to classify divs that cover the game
screen. (pause, menu, etc)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	<body>
         <div id="playfield" height=400 width=400>
             <canvas id="shootem" height=400 width=400></canvas>
-            <div id="startScreen">
-				<div id="strtmsg">CLICK TO START</div>
-			</div>
+            <div id="startScreen" class="overlay">
+                <div id="strtmsg">CLICK TO START</div>
+            </div>
+            <div id="pauseScreen" class="overlay">PAUSED</div>
         </div>
         <div id="debug">
             <label for="targetinfo">Target Info:</label>
