--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
 	<script src="jquery-1.11.1.js"></script>
         <script src="shootem.js"></script>
+        <script src="target.js"></script>
         <script src="shtmView.js"></script>
 	</head>
 	<body>
